# chess

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: cmake-single-platform.yml
include/: Board.h  Config.h  Game.h  InputManager.h  Move.h  Piece.h  Player.h  SFMLDisplay.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
include/chess/: Graphics.h
pieces/: Pawn.cpp
src/: Move.h  board.cpp  config.cpp  game.cpp  input_manager.cpp  main.cpp  piece.cpp  player.cpp  sfmldisplay.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
